python 2.7 to 3.5